--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.57.4",
     "@types/bcryptjs": "^2.4.6",
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-sdk-ng": "^4.24.0",
     "bcryptjs": "^3.0.2",
     "next": "15.5.3",
+    "node-fetch": "^3.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
